force-app/main/default/objects/Account/fields/Entity_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Entity_Filing_Date__c</fullName>
    <description>Date that the request for entity registration</description>
    <inlineHelpText>Date that the request for entity registration</inlineHelpText>
    <label>Entity Filing Date</label>
    <type>Date</type>
</CustomField>