force-app/main/default/objects/Account/fields/Entity_Formation_Date__c.field-meta.xml
<CustomField>
    <fullName>Entity_Formation_Date__c</fullName>
    <description>Date that the request for LLC was filed</description>
    <inlineHelpText>Date that the request for LLC was filed</inlineHelpText>
    <label>Entity Formation Date</label>
    <type>Date</type>
</CustomField>