force-app/main/default/objects/Account/fields/Entity_Types__c.field-meta.xml
<CustomField>
    <fullName>Entity_Types__c</fullName>
    <label>Entity Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>