force-app/main/default/objects/Account/fields/Est_FixFlip_Volume_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Est_FixFlip_Volume_per_Year__c</fullName>
    <description>Estimated Fix/Flip Volume per Year (Updated Monthly with 3rd Party Data)</description>
    <inlineHelpText>Estimated Fix/Flip Volume per Year (Updated Monthly with 3rd Party Data)</inlineHelpText>
    <label>Est. Fix/Flip Volume per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>