force-app/main/default/objects/Account/fields/Est_SFR_Portfolio_Value__c.field-meta.xml
<CustomField>
    <fullName>Est_SFR_Portfolio_Value__c</fullName>
    <description>Estimated SFR Portfolio Value (Updated Monthly with 3rd Party Data)</description>
    <inlineHelpText>Estimated SFR Portfolio Value (Updated Monthly with 3rd Party Data)</inlineHelpText>
    <label>Est. SFR Portfolio Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>