force-app/main/default/objects/Account/fields/External_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Record_ID__c</fullName>
    <description>This is the Record ID from the system of Record where this Record came from</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the Record ID from the system of Record where this Record came from</inlineHelpText>
    <label>External Record ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>