force-app/main/default/objects/Account/fields/FDIC_NCUA__c.field-meta.xml
<CustomField>
    <fullName>FDIC_NCUA__c</fullName>
    <label>FDIC / NCUA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>