force-app/main/default/objects/Account/fields/Fidelity_Bond_and_E_O_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Fidelity_Bond_and_E_O_Coverage__c</fullName>
    <inlineHelpText>Min $300,000?</inlineHelpText>
    <label>Fidelity Bond and E&amp;O Coverage?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>