force-app/main/default/objects/Account/fields/FixFlip_Investor__c.field-meta.xml
<CustomField>
    <fullName>FixFlip_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fix/Flip Investor (Updated Monthly with 3rd Party Data)</description>
    <inlineHelpText>Fix/Flip Investor (Updated Monthly with 3rd Party Data)</inlineHelpText>
    <label>Fix/Flip Investor</label>
    <type>Checkbox</type>
</CustomField>