force-app/main/default/objects/Account/fields/FundingShield_Last_Vetted_Date__c.field-meta.xml
<CustomField>
    <fullName>FundingShield_Last_Vetted_Date__c</fullName>
    <description>Works with the FundingShield Status for title &amp; escrow vendor accounts and showing on which date they were last vetted by funding shield</description>
    <inlineHelpText>The date on which this title &amp; escrow account was last vetted by FundingShield (account&apos;s vetting may have expired since this date; look to the FundingShield Status field on whether their vetting is current)</inlineHelpText>
    <label>FundingShield Last Vetted Date</label>
    <type>Date</type>
</CustomField>