force-app/main/default/objects/Account/fields/FundingShield_Status__c.field-meta.xml
<CustomField>
    <fullName>FundingShield_Status__c</fullName>
    <description>Title &amp; Escrow vendor accounts may need to be vetted by FundingShield, and for some companies, that vetting expires while for others it does not.</description>
    <inlineHelpText>Indicate whether this title &amp; escrow account has been vetted by FundingShield.</inlineHelpText>
    <label>FundingShield Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vetted with expiration</fullName>
            </value>
            <value>
                <fullName>Vetted with no expiration</fullName>
            </value>
            <value>
                <fullName>Not vetted</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>