force-app/main/default/objects/Account/fields/Home_Depot__c.field-meta.xml
<CustomField>
    <fullName>Home_Depot__c</fullName>
    <description>A six digit code to provide borrower accounts that have closed a deal with CoreVest</description>
    <inlineHelpText>Home Depot Discount Code</inlineHelpText>
    <label>HD Discount Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>