force-app/main/default/objects/Account/fields/In_Foreclosure__c.field-meta.xml
<CustomField>
    <fullName>In_Foreclosure__c</fullName>
    <businessOwnerGroup>Asset_Management</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Asset Management will check this box to indicate the Account is in foreclosure. Show Rich Text Banner for All Account, Deal, and Properties.</description>
    <inlineHelpText>This Account is in Foreclosure – Please refer to Asset Management</inlineHelpText>
    <label>In Foreclosure</label>
    <type>Checkbox</type>
</CustomField>