force-app/main/default/objects/Account/fields/In_Litigation__c.field-meta.xml
<CustomField>
    <fullName>In_Litigation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flagging an account as in litigation</description>
    <label>In Litigation</label>
    <type>Checkbox</type>
</CustomField>