force-app/main/default/objects/Account/fields/Inbound_Date__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Date__c</fullName>
    <description>Inbound Date for the source Lead</description>
    <inlineHelpText>Inbound Date for the source Lead</inlineHelpText>
    <label>Inbound Date</label>
    <type>Date</type>
</CustomField>