force-app/main/default/objects/Account/fields/Interest_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Interest_Calculation_Method__c</fullName>
    <label>Interest Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual/365</fullName>
            </value>
            <value>
                <fullName>Actual/360</fullName>
            </value>
            <value>
                <fullName>30/365</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>