force-app/main/default/objects/Account/fields/Introductions_Source__c.field-meta.xml
<CustomField>
    <fullName>Introductions_Source__c</fullName>
    <label>Introduction Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email Blast</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Hotline</fullName>
            </value>
            <value>
                <fullName>Imported List</fullName>
            </value>
            <value>
                <fullName>Non-Database</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>