force-app/main/default/objects/Account/fields/Investor_Code__c.field-meta.xml
<CustomField>
    <fullName>Investor_Code__c</fullName>
    <label>Investor Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>