force-app/main/default/objects/Account/fields/Investor_Type__c.field-meta.xml
<CustomField>
    <fullName>Investor_Type__c</fullName>
    <description>Investor Type (Updated Monthly with 3rd Party Data)</description>
    <inlineHelpText>Investor Type (Updated Monthly with 3rd Party Data)</inlineHelpText>
    <label>Investor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Very Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>