force-app/main/default/objects/Account/fields/Last_12_Months_Acquisitions_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Last_12_Months_Acquisitions_Dollar__c</fullName>
    <description>Last 12 Months Acquisitions - Dollar (Updated Monthly with 3rd Party Data)</description>
    <inlineHelpText>Last 12 Months Acquisitions - Dollar (Updated Monthly with 3rd Party Data)</inlineHelpText>
    <label>Last 12 Months Acquisitions - Dollar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>