force-app/main/default/objects/Account/fields/Legal_Structure__c.field-meta.xml
<CustomField>
    <fullName>Legal_Structure__c</fullName>
    <label>Legal Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited Liability Corporation</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>