force-app/main/default/objects/Account/fields/Lending_Geography_State__c.field-meta.xml
<CustomField>
    <fullName>Lending_Geography_State__c</fullName>
    <description>Lender state</description>
    <label>Lending Geography State</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>