force-app/main/default/objects/Account/fields/Loan_Docs_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Docs_Approved_Date__c</fullName>
    <label>Loan Docs Approved Date</label>
    <type>Date</type>
</CustomField>