force-app/main/default/objects/Account/fields/Loan_Origination_System_LOS__c.field-meta.xml
<CustomField>
    <fullName>Loan_Origination_System_LOS__c</fullName>
    <label>Loan Origination System (LOS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proprietary</fullName>
            </value>
            <value>
                <fullName>The Mortgage Office</fullName>
            </value>
            <value>
                <fullName>Alfred</fullName>
            </value>
            <value>
                <fullName>LendingWise</fullName>
            </value>
            <value>
                <fullName>Mortgage Automator</fullName>
            </value>
            <value>
                <fullName>Liquid Logics</fullName>
            </value>
            <value>
                <fullName>Compass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>