force-app/main/default/objects/Account/fields/Loan_Product_s__c.field-meta.xml
<CustomField>
    <fullName>Loan_Product_s__c</fullName>
    <label>Loan Product(s)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
            <value>
                <fullName>Single Asset</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>