force-app/main/default/objects/Account/fields/LOC_LTM_Actual__c.field-meta.xml
<CustomField>
    <fullName>LOC_LTM_Actual__c</fullName>
    <description>Not Used</description>
    <label>LOC LTM Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>