force-app/main/default/objects/Account/fields/Market_Intellligence_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Market_Intellligence_Last_Updated__c</fullName>
    <description>Date that this Market Intelligence was last updated</description>
    <inlineHelpText>Date that this Market Intelligence was last updated</inlineHelpText>
    <label>Market Intellligence Last Updated</label>
    <type>Date</type>
</CustomField>