force-app/main/default/objects/Account/fields/Max_LTC__c.field-meta.xml
<CustomField>
    <fullName>Max_LTC__c</fullName>
    <description>Not Used</description>
    <label>Max LTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>