force-app/main/default/objects/Account/fields/Max_LTV__c.field-meta.xml
<CustomField>
    <fullName>Max_LTV__c</fullName>
    <description>Not Used</description>
    <label>Max LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>