force-app/main/default/objects/Account/fields/MERS_ID__c.field-meta.xml
<CustomField>
    <fullName>MERS_ID__c</fullName>
    <label>MERS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>