force-app/main/default/objects/Account/fields/MFR_Monthly_Units__c.field-meta.xml
<CustomField>
    <fullName>MFR_Monthly_Units__c</fullName>
    <description>Lender partnerships field. The estimated average monthly count of MFR units in their lending portfolio.</description>
    <inlineHelpText>The estimated average monthly count of MFR units in their lending portfolio.</inlineHelpText>
    <label>MFR - Monthly Units (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>