force-app/main/default/objects/Account/fields/Minimum_net_worth_of_50_000__c.field-meta.xml
<CustomField>
    <fullName>Minimum_net_worth_of_50_000__c</fullName>
    <description>Not Used</description>
    <label>“Minimum net worth of $50,000?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>