force-app/main/default/objects/Account/fields/Minimum_two_years_in_business__c.field-meta.xml
<CustomField>
    <fullName>Minimum_two_years_in_business__c</fullName>
    <label>Minimum two years in business?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>