force-app/main/default/objects/Account/fields/MLPA_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>MLPA_Executed_Date__c</fullName>
    <description>Mortgage Loan Purchase Agreement Executed Date</description>
    <inlineHelpText>Mortgage Loan Purchase Agreement Executed Date</inlineHelpText>
    <label>MLPA Executed Date</label>
    <type>Date</type>
</CustomField>