force-app/main/default/objects/Account/fields/MLPA_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>MLPA_Sent_Date__c</fullName>
    <description>Mortgage Loan Purchase Agreement Sent Date</description>
    <inlineHelpText>Mortgage Loan Purchase Agreement Sent Date</inlineHelpText>
    <label>MLPA Sent Date</label>
    <type>Date</type>
</CustomField>