force-app/main/default/objects/Account/fields/Monthly_of_Units_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Monthly_of_Units_Consumer__c</fullName>
    <description>Lender partnerships field. The estimated average monthly count of consumer units in their lending portfolio.</description>
    <inlineHelpText>The estimated average monthly count of consumer units in their lending portfolio.</inlineHelpText>
    <label>Monthly # of Units (Consumer)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>