force-app/main/default/objects/Account/fields/Monthly_of_Units_Other__c.field-meta.xml
<CustomField>
    <fullName>Monthly_of_Units_Other__c</fullName>
    <description>Lender partnerships field. The estimated average monthly count of other units in their lending portfolio.</description>
    <inlineHelpText>The estimated average monthly count of other units in their lending portfolio. Other = categorized outside of the defined Monthly # of Unit fields provided.</inlineHelpText>
    <label>Monthly # of Units (Other)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>