force-app/main/default/objects/Account/fields/Monthly_Volume_Fix_Flip__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Volume_Fix_Flip__c</fullName>
    <description>Lender partnerships field. The estimated average monthly monetary volume of fix and flip units in their lending portfolio.</description>
    <inlineHelpText>The estimated average monthly monetary volume of fix and flip units in their lending portfolio.</inlineHelpText>
    <label>Monthly Volume $ (Fix &amp; Flip)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>