force-app/main/default/objects/Account/fields/Most_Recent_Lender_Activity__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Lender_Activity__c</fullName>
    <description>Most Recent Lender Activity (Updated Monthly with 3rd Party Data)</description>
    <inlineHelpText>Most Recent Lender Activity (Updated Monthly with 3rd Party Data)</inlineHelpText>
    <label>Most Recent Lender Activity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>