force-app/main/default/objects/Account/fields/Most_Recent_Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Opportunity_Date__c</fullName>
    <description>This field is used to generate the most recent create date for a deal, which is tied to the account.</description>
    <label>Most Recent Opportunity Date</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>